--- a/vercel.json
+++ b/vercel.json
@@ -18,6 +18,10 @@
     {
       "src": "/",
       "dest": "public/index.html"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "public/$1"
     }
   ]
 }
