chore: Include rewrite rule for serving files in the public folder

--- a/vercel.json
+++ b/vercel.json
@@ -15,5 +15,11 @@
         "src": "/(.*)",
         "dest": "index.js"
       }
+    ],
+    "rewrites": [
+      {
+        "source": "/public/(.*)",
+        "destination": "/public/$1"
+      }
     ]
   }
